--- a/workout.html
+++ b/workout.html
@@ -461,8 +461,7 @@ overflow-x: hidden;
         </audio>
       </div>
       <div id="sirenAudio" class="siren-audio w-embed">
-        <audio id="sirenSrc">
-          <source src="{{r.26.d[0].Audio[0].url}}" type="{{r.26.d[0].Audio[0].type}}">
+        <audio id="sirenSrc" src="" preload="auto">
         </audio>
       </div>
     </div>
@@ -490,6 +489,7 @@ overflow-x: hidden;
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6474932b31758d71131214b7"
     type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
     crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.4/howler.min.js" integrity="sha512-xi/RZRIF/S0hJ+yJJYuZ5yk6/8pCiRlEXZzoguSMl+vk2i3m6UjUO/WcZ11blRL/O+rnj94JRGwt/CHbc9+6EA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="js/the-legends-web-app.js" type="text/javascript"></script>
   <script src="js/other/misc.js" type="text/javascript"></script>
   <script src="js/workouts/workout.js" type="text/javascript"></script>
