--- a/workout.html
+++ b/workout.html
@@ -111,6 +111,29 @@
       transform-origin: center;
       transition: all 0.25s ease-in-out;
     }
+    .path {
+    
+    stroke: #397234;
+    stroke-width: 3px;
+    /*animation: dash 15s ease-in-out infinite;*/
+    fill: whitesmoke;
+    }
+
+  .path2 {
+
+    stroke: white;
+    stroke-width: 10px;
+    /*animation: dash 15s ease-in-out infinite;*/
+    fill: none;
+  }
+
+  .video-loader {
+    background-color: var(--dark-olive-green);
+    opacity: 1;
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, .28));
+}
+
+    </style>
   </style>
   <link rel="manifest" href="manifest.json" />
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
@@ -138,6 +161,14 @@
               </a>
             </div>
           </div>
+          <article id="loader" class="loading-workout video-loader" style="background-color: #397234;" v-if="StatusCode200 !== true">
+            <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="200" height="200px" viewBox="0 0 256 256">
+              <defs>
+              </defs>
+              <path class="path2" stroke="#397234" d="m190.4,125.6h-60.1V61.1H61.1v133.7h133.7v-69.3l-4.4.1h0Zm-124.8-60h60.1v59.9h-60.1v-59.9Zm0,64.5h60.1v60.3h-60.1v-60.3Zm124.8,60.3h-60.1v-60.3h60.1v60.3Z"/>
+            </svg>
+            <div id="Trigger" data-w-id="88c3a08d-4e41-ae0e-b174-11915f51768a" class="loading-trigger"></div>
+          </article>
           <!--<article id="loader" class="loading-workout">
             <div class="workout-loader w-embed">
               <?xml version="1.0" encoding="utf-8"?>
@@ -323,16 +354,16 @@
                   </div>
                 </div>
               </div>
-              <div id="controls" w-el="workout_controls" class="content-spacer workout-controls">
+              <div id="controls" class="content-spacer workout-controls">
                 <div class="content-headings style-2">
                   <h2 class="main-heading-style-1">Difficulty Settings</h2>
                 </div>
-                <div class="accordion style-1 single-diff-controls">
+                <div class="accordion style-1">
                   <div class="accordion-header style-3">
                     <div class="accordion-header-text style-2">
                       <div class="accordion-header-top-content">
-                        <h2 class="main-sub-heading-style-1">
-                          Difficulty Level
+                        <h2 class="main-sub-heading-style-1" ref="diffControlTitle">
+                          Loading...
                         </h2>
                         <div class="accordion-header-arrow">
                           <div class="accordion-arrow-icon hide"></div>
@@ -340,15 +371,15 @@
                       </div>
                     </div>
                     <div class="diff-trigger">
-                      <div id="minusBtn" class="counter-btn">
+                      <div class="counter-btn" v-on:click="ChangeDifficulty(0, this.$refs.video, this.$refs.min)">
                         <div class="counter-arrow left"></div>
                       </div>
                       <div class="counter-num">
-                        <div id="currentNum" class="num current">1</div>
+                        <div class="num current" ref="min">1</div>
                         <div class="num divider">/</div>
-                        <div id="limitNum" class="num limit">5</div>
+                        <div class="num limit" ref="max">5</div>
                       </div>
-                      <div id="plusBtn" class="counter-btn">
+                      <div class="counter-btn" v-on:click="ChangeDifficulty(1, this.$refs.video, this.$refs.min)">
                         <div class="counter-arrow right"></div>
                       </div>
                     </div>
@@ -388,6 +419,7 @@
   </div>
   <div id="return" data-w-id="80985ed4-635f-e834-38d5-ca513f69ee79" class="modal-trigger"></div>
   <div id="roundTrigger" class="roundtrigger"></div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js" integrity="sha512-z4OUqw38qNLpn1libAN9BsoDx6nbNFio5lA6CuTp9NlK83b89hgyCVq+N5FdBJptINztxn1Z3SaKSKUS5UP60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6474932b31758d71131214b7"
     type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
     crossorigin="anonymous"></script>
