--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
   </div>
   <header class="header_main">
     <div class="header_main_nav_button">
-      <a href="login.html" class="header_main_secondary_button">Login</a>
+      <a href="login.html" class="header_main_secondary_button"></a>
       <div data-w-id="d802454b-ec05-0432-5a55-2d31b48911ed" class="header_main_nav_icon">
         <div class="nav_icon_line"></div>
         <div class="nav_icon_line"></div>
@@ -94,7 +94,7 @@
     <div class="header_main_menu">
       <header class="header_main">
         <div class="header_main_nav_button opened">
-          <a href="login.html" class="header_main_secondary_button opened">Login</a>
+          <a href="login.html" class="header_main_secondary_button opened" id="mainBtn"></a>
           <div data-w-id="e830f2b1-8e19-209f-65a1-fdc2214c379c" class="header_main_nav_icon">
             <div class="nav_icon_line opened"></div>
             <div class="nav_icon_line opened"></div>
@@ -353,6 +353,7 @@
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6474932b31758d71131214b7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/the-legends-web-app.js" type="text/javascript"></script>
   <script src="js/other/misc.js" type="text/javascript"></script>
+  <script src="js/other/userid.js"></script>
   <script src="js/other/about.js" type="text/javascript"></script>
 </body>
 </html>
