--- a/blog-post.html
+++ b/blog-post.html
@@ -114,7 +114,7 @@ img {
   <div w-el="blog_page" class="app index">
     <header class="header_main">
       <div class="header_main_nav_button">
-        <a href="login.html" class="header_main_secondary_button">Login</a>
+        <a href="login.html" class="header_main_secondary_button" id="mainBtn"></a>
         <div data-w-id="d802454b-ec05-0432-5a55-2d31b48911ed" class="header_main_nav_icon">
           <div class="nav_icon_line"></div>
           <div class="nav_icon_line"></div>
@@ -125,7 +125,7 @@ img {
       <div class="header_main_menu">
         <header class="header_main">
           <div class="header_main_nav_button opened">
-            <a href="login.html" class="header_main_secondary_button opened">Login</a>
+            <a href="login.html" class="header_main_secondary_button opened"></a>
             <div data-w-id="e830f2b1-8e19-209f-65a1-fdc2214c379c" class="header_main_nav_icon">
               <div class="nav_icon_line opened"></div>
               <div class="nav_icon_line opened"></div>
@@ -222,6 +222,7 @@ img {
   <script src="js/the-legends-web-app.js" type="text/javascript"></script>
   <script src="https://unpkg.com/showdown/dist/showdown.min.js" type="text/javascript"></script>
   <script src="js/other/misc.js" type="text/javascript"></script>
+  <script src="js/other/userid.js"></script>
   <script>
 window.onload = async () => {  
     Wized.request.await("Load Blog", (response) => {  
