--- a/blogs.html
+++ b/blogs.html
@@ -83,7 +83,7 @@
   <div w-el="blogs_page" class="app index">
     <header class="header_main">
       <div class="header_main_nav_button">
-        <a href="login.html" class="header_main_secondary_button">Login</a>
+        <a href="login.html" class="header_main_secondary_button" id="mainBtn"></a>
         <div data-w-id="d802454b-ec05-0432-5a55-2d31b48911ed" class="header_main_nav_icon">
           <div class="nav_icon_line"></div>
           <div class="nav_icon_line"></div>
@@ -201,5 +201,6 @@
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6474932b31758d71131214b7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/the-legends-web-app.js" type="text/javascript"></script>
   <script src="js/other/misc.js" type="text/javascript"></script>
+  <script src="js/other/userid.js"></script>
 </body>
 </html>
