--- a/workout.html
+++ b/workout.html
@@ -145,15 +145,15 @@
         <div class="app-block viewer" style="overflow-x: hidden; background-color: #397235; background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, .28));">
           <div class="banner top-bar"></div>
           <div class="banner bottom-bar"></div>
-            <video ref="video" loop preload="auto" src="" muted webkit-playsinline playsinline class="app-fullscreen-video"
-              style="background-color: #c2c2c2">
+            <video ref="video" loop preload="auto" v-bind:src="`${exerciseVideo}`" muted webkit-playsinline playsinline class="app-fullscreen-video"
+              style="background-color: #c2c2c2" v-if="StatusCode200 == true">
               <!--<source src="" type="video/mp4" />-->
             </video>
           <div id="exerciseHeader" style="display: none; opacity: 0" class="header-current animated"  v-show="!popup">
             <div class="workout-navigation">
-              <div id="repText" ref="type" class="generic-text-style-2">Time</div>
-              <div id="safeTimerDisplay" ref="amount" class="generic-text-style-3">
-                Loading...
+              <div id="repText" class="generic-text-style-2" v-if="StatusCode200 == true">{{exerciseType}}</div>
+              <div id="safeTimerDisplay"  class="generic-text-style-3" v-if="StatusCode200 == true">
+                {{exerciseAmount}}
               </div>
               <a href="#scroll" class="nav-workout-button panel-button w-inline-block">
                 <div class="nav-cog-icon"></div>
@@ -247,7 +247,7 @@
             <div class="info-block-header workout">
               <div id="exerciseTitle" style="display: none; opacity: 0" class="title-text" v-if="!popup">
                 <div class="exercises-headings single_heading_block">
-                  <div class="main-heading-style-6 center-align single-title" ref="title">
+                  <div class="main-heading-style-6 center-align single-title" v-if="StatusCode200 == true">
                     {{exerciseTitle}}
                   </div>
                 </div>
@@ -369,7 +369,7 @@
                   </div>
                 </div>
               </div>
-              <div id="controls" class="content-spacer workout-controls">
+              <div id="controls" class="content-spacer workout-controls" v-show="StatusCode200 == true">
                 <div class="content-headings style-2">
                   <h2 class="main-heading-style-1">Difficulty Settings</h2>
                   <h2 class="main-heading-style-1">Round Number {{workout.round}}</h2>
@@ -412,8 +412,8 @@
       </div>
     </div>
     <div class="audio">
-        <audio id="voiceSrc" ref="voice" src=""></audio>
-        <audio id="sirenSrc" ref="siren" v-bind:src="`${workout.finishAudio}`"></audio>
+        <audio id="voiceSrc" ref="voice" v-bind:src="`${exerciseVoice}`" v-if="StatusCode200 == true"></audio>
+        <audio id="sirenSrc" ref="siren" v-bind:src="`${workout.finishAudio}`" v-if="StatusCode200 == true"></audio>
     </div>
   </div>
   <div w-el="execise_notice_modal" class="modal style-2">
