--- a/workout.html
+++ b/workout.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <!--  Last Published: Tue Nov 07 2023 02:33:37 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="652de2d2a39d12c64b3d891d" data-wf-site="6474932b31758d71131214b7" lang="en">
-
 <head>
   <meta charset="utf-8" />
-  <title>Workout</title>
+  <title>Loading...</title>
   <meta content="Workout" property="og:title" />
   <meta content="Workout" property="twitter:title" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
