--- a/workout.html
+++ b/workout.html
@@ -386,18 +386,18 @@
                   </div>
                 </div>
               </div>
-              <div id="controls" class="content-spacer workout-controls" v-show="StatusCode200 == true && completed !== true" >
+              <div id="controls" class="content-spacer workout-controls" v-show="StatusCode200 == true && completed !== true && popup !== true" >
                 <div class="content-headings style-2">
                   <h2 class="main-heading-style-1">Difficulty Settings</h2>
-                  <h2 class="main-heading-style-1">Round Number {{workout.round}}</h2>
-                  <h2 class="main-heading-style-1">Exercise Number {{workout.exercises}}</h2>
+                  <h2 class="main-heading-style-1" v-if="Debug">Round Number {{workout.round}}</h2>
+                  <h2 class="main-heading-style-1" v-if="Debug">Exercise Number {{workout.exercises}}</h2>
                 </div>
                 <div class="accordion style-1">
                   <div class="accordion-header style-3">
                     <div class="accordion-header-text style-2">
                       <div class="accordion-header-top-content">
-                        <h2 class="main-sub-heading-style-1" ref="diffControlTitle">
-                          Loading...
+                        <h2 class="main-sub-heading-style-1" ref="diffControlTitle" v-if="StatusCode200 == true && exerciseTitle !== undefined">
+                          {{exerciseTitle}}
                         </h2>
                         <div class="accordion-header-arrow">
                           <div class="accordion-arrow-icon hide"></div>
@@ -405,16 +405,20 @@
                       </div>
                     </div>
                     <div class="diff-trigger">
-                      <div class="counter-btn" v-on:click="ChangeDifficulty(0, this.$refs.video, this.$refs.min)">
+                      <div class="counter-btn" v-if="StatusCode200 == true &&this.min == 0" style="cursor: default !important;">
+                      </div>
+                      <div class="counter-btn" v-on:click="ChangeDifficulty(0, this.$refs.video, this.$refs.min)" v-if="StatusCode200 == true &&this.min !== 0">
                         <div class="counter-arrow left"></div>
                       </div>
                       <div class="counter-num">
-                        <div class="num current" ref="min">1</div>
+                        <div class="num current" ref="min" v-if="StatusCode200 == true">{{exerciseMin + 1}}</div>
                         <div class="num divider">/</div>
-                        <div class="num limit" ref="max">5</div>
+                        <div class="num limit" ref="max" v-if="StatusCode200 == true">{{exerciseMax}}</div>
                       </div>
-                      <div class="counter-btn" v-on:click="ChangeDifficulty(1, this.$refs.video, this.$refs.min)">
+                      <div class="counter-btn" v-on:click="ChangeDifficulty(1, this.$refs.video, this.$refs.min)" v-if="StatusCode200 == true && this.min + 1 !== exerciseMax">
                         <div class="counter-arrow right"></div>
+                      </div>
+                      <div class="counter-btn" v-if="StatusCode200 == true && this.min + 1 == exerciseMax" style="cursor: default !important;">
                       </div>
                     </div>
                   </div>
