--- a/recipe-hub.html
+++ b/recipe-hub.html
@@ -9,6 +9,7 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
   <link href="css/the-legends-web-app.css" rel="stylesheet" type="text/css">
+  <link href="sal/sal.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
@@ -371,100 +372,22 @@ overflow-x: hidden;
               </div>
             </div>
             <div style="display:flex;opacity:1" class="content tab-1">
-              <div class="accordion style-1">
+              <div class="accordion style-1" v-bind:key="type" v-for="(type, typeIndex) in RenderRecipes">
                 <div data-w-id="73061464-46e8-2753-1baa-b5b9729db72b" class="accordion-header">
                   <div class="accordion-header-text">
                     <div class="accordion-header-top-content">
-                      <h2 w-el="recipe_tag_name" class="main-heading-style-1">Breakfast</h2>
+                      <h2 class="main-heading-style-1" v-if="typeIndex == 0">Breakfast</h2>
+                      <h2 class="main-heading-style-1" v-if="typeIndex == 1">Lunch</h2>
+                      <h2 class="main-heading-style-1" v-if="typeIndex == 2">Dinner</h2>
+                      <h2 class="main-heading-style-1" v-if="typeIndex == 3">Snacks</h2>
                       <div class="accordion-header-arrow">
                         <div class="accordion-arrow-icon"></div>
                       </div>
                     </div>
                   </div>
                 </div>
-                <div id="breakfast" class="accordion-body style-1">
-                  <div v-bind:key="recipe" v-for="(recipe, index) in Breakfast" class="dynamic_show">
-                    <a v-bind:href="`/recipe?recipe=${recipe.ID}`" href="#" class="capsule-body style-1 recipes breakfast w-inline-block">
-                      <div class="capsule-image-block image_src"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" loading="lazy" v-bind:srcset="`${recipe.Images[0].url}`" alt="" class="full_thumbnail"></div>
-                      <div class="capsule-header-content">
-                        <div class="capsule-header-text">
-                          <h2 class="main-heading-style-1">{{recipe.Name}}</h2>
-                          <div class="generic-text-style-1">{{recipe.Time}}</div>
-                          <div class="generic-text-style-1 filter">{{recipe.Dietary_Require}}</div>
-                        </div>
-                        <div v-bind:class="User.Cooked_Recipes_Record_ID !== undefined &amp;&amp; User.Cooked_Recipes_Record_ID.includes(recipe.ID) ? &#x27;completed&#x27; : &#x27;not_completed&#x27;" class="completed-indicator"></div>
-                      </div>
-                    </a>
-                  </div>
-                </div>
-              </div>
-              <div class="accordion style-1">
-                <div data-w-id="73061464-46e8-2753-1baa-b5b9729db74d" class="accordion-header">
-                  <div class="accordion-header-text">
-                    <div class="accordion-header-top-content">
-                      <h2 w-el="recipe_tag_name" class="main-heading-style-1">Lunch</h2>
-                      <div class="accordion-header-arrow">
-                        <div class="accordion-arrow-icon"></div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div id="lunch" class="accordion-body style-1">
-                  <div v-bind:key="recipe" v-for="(recipe, index) in Lunch" class="dynamic_show">
-                    <a v-bind:href="`/recipe?recipe=${recipe.ID}`" href="#" class="capsule-body style-1 recipes breakfast w-inline-block">
-                      <div class="capsule-image-block image_src"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" loading="lazy" v-bind:srcset="`${recipe.Images[0].url}`" alt="" class="full_thumbnail"></div>
-                      <div class="capsule-header-content">
-                        <div class="capsule-header-text">
-                          <h2 class="main-heading-style-1">{{recipe.Name}}</h2>
-                          <div class="generic-text-style-1">{{recipe.Time}}</div>
-                          <div class="generic-text-style-1 filter">{{recipe.Dietary_Require}}</div>
-                        </div>
-                        <div v-bind:class="User.Cooked_Recipes_Record_ID !== undefined &amp;&amp; User.Cooked_Recipes_Record_ID.includes(recipe.ID) ? &#x27;completed&#x27; : &#x27;not_completed&#x27;" class="completed-indicator"></div>
-                      </div>
-                    </a>
-                  </div>
-                </div>
-              </div>
-              <div class="accordion style-1">
-                <div data-w-id="73061464-46e8-2753-1baa-b5b9729db76f" class="accordion-header">
-                  <div class="accordion-header-text">
-                    <div class="accordion-header-top-content">
-                      <h2 w-el="recipe_tag_name" class="main-heading-style-1">Dinner</h2>
-                      <div class="accordion-header-arrow">
-                        <div class="accordion-arrow-icon"></div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div id="dinner" class="accordion-body style-1">
-                  <div v-bind:key="recipe" v-for="(recipe, index) in Dinner" class="dynamic_show">
-                    <a v-bind:href="`/recipe?recipe=${recipe.ID}`" href="#" class="capsule-body style-1 recipes breakfast w-inline-block">
-                      <div class="capsule-image-block image_src"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" loading="lazy" v-bind:srcset="`${recipe.Images[0].url}`" alt="" class="full_thumbnail"></div>
-                      <div class="capsule-header-content">
-                        <div class="capsule-header-text">
-                          <h2 class="main-heading-style-1">{{recipe.Name}}</h2>
-                          <div class="generic-text-style-1">{{recipe.Time}}</div>
-                          <div class="generic-text-style-1 filter">{{recipe.Dietary_Require}}</div>
-                        </div>
-                        <div v-bind:class="User.Cooked_Recipes_Record_ID !== undefined &amp;&amp; User.Cooked_Recipes_Record_ID.includes(recipe.ID) ? &#x27;completed&#x27; : &#x27;not_completed&#x27;" class="completed-indicator"></div>
-                      </div>
-                    </a>
-                  </div>
-                </div>
-              </div>
-              <div class="accordion style-1">
-                <div data-w-id="73061464-46e8-2753-1baa-b5b9729db791" class="accordion-header">
-                  <div class="accordion-header-text">
-                    <div class="accordion-header-top-content">
-                      <h2 w-el="recipe_tag_name" class="main-heading-style-1">Snacks</h2>
-                      <div class="accordion-header-arrow">
-                        <div class="accordion-arrow-icon"></div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div id="snacks" class="accordion-body style-1">
-                  <div v-bind:key="recipe" v-for="(recipe, index) in Snacks" class="dynamic_show">
+                <div class="accordion-body style-1">
+                  <div v-bind:key="recipe" v-for="(recipe, index) in RenderRecipes[typeIndex]" class="dynamic_show" data-sal="slide-up" data-sal-duration="1000">
                     <a v-bind:href="`/recipe?recipe=${recipe.ID}`" href="#" class="capsule-body style-1 recipes breakfast w-inline-block">
                       <div class="capsule-image-block image_src"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" loading="lazy" v-bind:srcset="`${recipe.Images[0].url}`" alt="" class="full_thumbnail"></div>
                       <div class="capsule-header-content">
@@ -491,7 +414,7 @@ overflow-x: hidden;
                   </div>
                 </div>
                 <div class="accordion-body style-1">
-                  <a v-for="(recipe, index) in Favourites" v-bind:href="`/recipe?recipe=${User.Favourites_ID[index]}`" href="#" class="capsule-body style-1 recipes breakfast w-inline-block">
+                  <a v-for="(recipe, index) in Favourites" v-bind:href="`/recipe?recipe=${User.Favourites_ID[index]}`" href="#" class="capsule-body style-1 recipes breakfast w-inline-block" style="will-change: transform;" data-sal="slide-up" data-sal-duration="1000">
                     <div class="capsule-image-block image_src"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" loading="lazy" v-bind:srcset="`${User.FR_Images[index].url}`" alt="" class="full_thumbnail"></div>
                     <div class="capsule-header-content">
                       <div class="capsule-header-text">
@@ -583,6 +506,7 @@ overflow-x: hidden;
       <path class="path3" stroke="#397234" d="m190.4,125.6h-60.1V61.1H61.1v133.7h133.7v-69.3l-4.4.1h0Zm-124.8-60h60.1v59.9h-60.1v-59.9Zm0,64.5h60.1v60.3h-60.1v-60.3Zm124.8,60.3h-60.1v-60.3h60.1v60.3Z"/>
     </svg>
   </div>
+  <script src="sal/sal.js" type="text/javascript"></script>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6474932b31758d71131214b7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/the-legends-web-app.js" type="text/javascript"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js" integrity="sha512-z4OUqw38qNLpn1libAN9BsoDx6nbNFio5lA6CuTp9NlK83b89hgyCVq+N5FdBJptINztxn1Z3SaKSKUS5UP60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
