--- a/workout-library.html
+++ b/workout-library.html
@@ -9,6 +9,7 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
   <link href="css/the-legends-web-app.css" rel="stylesheet" type="text/css">
+  <link href="sal/sal.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
@@ -351,7 +352,7 @@ overflow-x: hidden;
               </div>
             </div>
             <div class="content-block style-2">
-              <a w-el="workout_capsule" href="workout-overview.html" class="capsule-body style-1 capsule-filter w-inline-block">
+              <a w-el="workout_capsule" href="workout-overview.html" class="capsule-body style-1 capsule-filter w-inline-block" data-sal="slide-up" data-sal-duration="1000" data-sal-delay="200">
                 <div w-el="workout_image" class="capsule-image-block"></div>
                 <div class="capsule-header-content">
                   <div class="capsule-header-text">
@@ -478,6 +479,7 @@ overflow-x: hidden;
     </div>
     <div id="trigger" class="loading-trigger"></div>
   </div>
+  <script src="sal/sal.js" type="text/javascript"></script>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6474932b31758d71131214b7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/the-legends-web-app.js" type="text/javascript"></script>
   <script src="js/other/misc.js" type="text/javascript"></script>
