--- a/workout-overview.html
+++ b/workout-overview.html
@@ -9,6 +9,7 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
   <link href="css/the-legends-web-app.css" rel="stylesheet" type="text/css">
+  <link href="sal/sal.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
@@ -513,7 +514,7 @@ overflow-x: hidden;
                   <div w-el="exercise_time_r1" class="generic-text-style-1 hide">Duration: 2 minutes</div>
                 </div>
                 <div class="tile-list">
-                  <a w-el="Exercise" href="tutorial.html" class="tile style-3 w-inline-block">
+                  <a w-el="Exercise" href="tutorial.html" class="tile style-3 w-inline-block" data-sal="slide-up" data-sal-duration="1000">
                     <div class="tile-header style-3">
                       <div class="tile-header-text style-2">
                         <h2 w-el="Exercise_Title" class="generic-text-style-11">Loading...</h2>
@@ -528,7 +529,6 @@ overflow-x: hidden;
                 </div>
               </div>
               <a href="workout.html" class="button-style-1 hide w-button">Warm up &amp; Workout</a>
-              <link rel="prerender" href="/workout">
               <a w-el="start_workout" href="workout.html" class="button-style-3 hide w-button">Skip the warmup</a>
               <a href="program-hub.html" class="button-style-5 w-button">Back to Week overview</a>
             </div>
@@ -628,6 +628,7 @@ overflow-x: hidden;
       <div id="trigger" class="loading-trigger"></div>
     </div>
   </div>
+  <script src="sal/sal.js" type="text/javascript"></script>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6474932b31758d71131214b7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/the-legends-web-app.js" type="text/javascript"></script>
   <script src="js/other/misc.js" type="text/javascript"></script>
